<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for passport scanning-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".registration.TakePassportPhotoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/passportImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/very_big_view_distance"
            android:contentDescription="@string/image_content_description_passport_text" />

        <Button
            android:id="@+id/retake_passport_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_view_distance"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/retake_photo_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_passport_photo_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_passport_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_view_distance"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/retake_passport_photo_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>